objects/G4S__Sync__c.object
<CustomObject>
    <fields>
        <fullName>G4S__API_Response__c</fullName>
        <label>API Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>G4S__Comment__c</fullName>
        <label>Comment</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>G4S__End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G4S__Events_Created__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Events Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G4S__Events_Updated__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Events Updated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G4S__Guests_In_Response__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Guests In Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G4S__Leads_Created__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Leads Created</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G4S__Range_End__c</fullName>
        <description>The end of the time range the sync is for.</description>
        <label>Range End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G4S__Range_Start__c</fullName>
        <description>The start of the time range the sync is for.</description>
        <label>Range Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G4S__Sessions_In_Response__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sessions In Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G4S__Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>G4S__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>G4S__Users_In_Request__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Users In Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>G4S__Users_In_Response__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Users In Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Glance Sync</label>
    <nameField>
        <label>Glance History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Glance Syncs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>